fix overlapping label in header

--- a/src/style.scss
+++ b/src/style.scss
@@ -337,6 +337,9 @@ $lu_drag_over: #979797;
         position: relative;
         background: inherit;
         transform-origin: left top;
+
+        text-overflow: ellipsis;
+        overflow-x: hidden;
       }
 
       span.lu-label {
